@@ -2,7 +2,12 @@
 
 	* gm2/gm2-compiler/M2GenGCC.mod:  fixed many imports so that
 	  the module can be built during stage2, via xgm2.
-	* 
+	* gm2/gm2-compiler/M2GCCDeclare.mod:  fixed many imports so that
+	  the module can be built during stage2, via xgm2.
+	* gm2/gm2-gcc/m2decl.def:  use BOOLEAN parameters rather than
+	  INTEGERs.
+	* gm2/p2c/p2c-src/src/decl.c:  tidied up formatting.
+
 2014-02-17      Gaius Mulley <gaius@gnu.org>
 
 	* gm2/config-lang.in:  added m2block.c, m2builtins.c and m2decl.c
